refactor and Add End to End Tests
