# docs/swagger.json
@@ -150,8 +150,8 @@
                             "$ref": "#/definitions/controller.Message"
                         }
                     },
-                    "400": {
-                        "description": "Bad Request",
+                    "401": {
+                        "description": "Unauthorized",
                         "schema": {
                             "$ref": "#/definitions/controller.ErrMessage"
                         }
